--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "aiogram>=3.24.0",
     "aiohttp>=3.13.3",
     "aiosqlite>=0.22.1",
+    "deep-translator>=1.11.4",
     "matplotlib>=3.10.8",
     "openai>=2.14.0",
     "python-dotenv>=1.2.1",
